--- a/trunk/perldoc/ko/perl/etc/perlsyn.pod
+++ b/trunk/perldoc/ko/perl/etc/perlsyn.pod
@@ -667,11 +667,11 @@ or C<?pat?> one-time matches:
 
 =end original
 
-上記の例で C<continue> ブロックがあったとしたら、それは
-(redo は continue ブロックをスキップするので) 正規表現によって
-捨てられた行だけが実行されるということに注意してください。
-continue ブロックは行カウンターをリセットするとか、
-一度だけマッチする C<?pat?> をリセットするのに使われます。
+위의 예제에서 C<continue> 블록이 있다고 하면, 그것은
+(redo 는 continue 블록을 스킵하기때문에) 정규표현에 의해
+비려진 줄만이 실행되는 것에 주의해주세요
+continue 블록은 행카운터를 리셋하거나,
+한번만 매치하ㅡㄴㄴ C<?pat?> 를 리셋하는 것에 사용됩니다.
 
     # inspired by :1,$g/fred/s//WILMA/
     while (<>) {
@@ -692,8 +692,8 @@ iteration.
 
 =end original
 
-C<while> を C<until> で置き換えた場合検査の意味は逆転しますが、
-繰り返しが実行されるより前に条件が検査されることは変わりありません。
+C<while> 을 C<until> 로 치환할 경우 검사의 의미는 반대가되지만,
+반복이 실행되는 것보다 앞에 조건이 검사되는 것은 변하지 않습니다.
 
 =begin original
 
@@ -702,9 +702,9 @@ they aren't loops.  You can double the braces to make them such, though.
 
 =end original
 
-ループ制御文は C<if> や C<unless> 中では動作しません。
-なぜならそこはループではないからです。
-しかし中かっこを二重にしてこれに対処することはできます。
+루프제어문은 C<if> 나 C<unless> 안에서는 동작하지 않습니다.
+왜냐면 그곳은 루프가 아니기때문입니다.
+그러나 중괄호를 이중으로해서 이것에 대처할 수도 있습니다.
 
     if (/pattern/) {{
 	last if /fred/;
@@ -719,8 +719,8 @@ executes once, see L<"Basic BLOCKs">.
 
 =end original
 
-これは、ブロック自身は一度だけ実行されるループとして動作するからです;
-L<"Basic BLOCKs"> を参照してください。
+이것은 블록 자신은 한번만 실행되는 루프로써 동작하기 때문입니다.
+L<"Basic BLOCKs"> 를 참조해주세요.
 
 =begin original
 
@@ -729,14 +729,14 @@ available.   Replace any occurrence of C<if BLOCK> by C<if (do BLOCK)>.
 
 =end original
 
-Perl 4 では使うことのできた C<while/if BLOCK BLOCK> という形式は、
-もはや使うことができません。
-C<if BLOCK> の部分を C<if (do BLOCK)> で置き換えてください。
+Perl 4 에서는 사용할 수 있었던 C<while/if BLOCK BLOCK> 같은 형태는
+이제는 사용할 수 없습니다.
+C<if BLOCK> 부분을 C<if (do BLOCK)> 으로 바꿔주세요.
 
 =head2 For Loops
 X<for> X<foreach>
 
-(for ループ)
+(for 루프)
 
 =begin original
 
@@ -745,9 +745,9 @@ that means that this:
 
 =end original
 
-Perl の C 形式の C<for> ループは、対応する C<while> ループと同様に
-動作します。
-つまり、以下のものは:
+Perl 의 C 형식의 C<for> 루프는, 대응하는 C<while> 루프처럼
+동작합니다.
+즉 이것은
 
     for ($i = 1; $i < 10; $i++) {
 	...
@@ -759,7 +759,7 @@ is the same as this:
 
 =end original
 
-以下のものと同じです:
+이것과 같습니다.
 
     $i = 1;
     while ($i < 10) {
@@ -778,9 +778,10 @@ X<my>
 
 =end original
 
-小さな違いが一つあります: C<for> の初期化部で C<my> を使って変数が
-宣言された場合、この変数のレキシカルスコープは C<for> ループ
-(ループ本体と制御部) と完全に同じです。
+작은 차이가 하나 있습니다: C<for> 의 초기부분ㅔ서 C<my> 를 사용해서 변수가
+선언된 경우, 이 변수의 렉시컬스코프는 C<for> 루프
+(루프 전체와 제어부) 와 완전히 같습니다.
+
 X<my>
 
 =begin original
@@ -794,10 +795,10 @@ X<eof> X<end-of-file> X<end of file>
 
 =end original
 
-通常の、配列に対する添え字付けのループのほかにも、C<for> は他の
-多くの興味深いアプリケーションのために借用することができます。
-以下の例は、対話的なファイル記述子の終端を明示的に検査してしまうと
-プログラムをハングアップしたように見えてしまう問題を回避するものです。
+일반적인 배열에 대한 첨자의 루프 이외에도, C<for> 는 다른
+많은 흥미있는 어플리케이션을 위해 차용할 수 있습니다.
+아래의 예는 대화적인 파일기술자의 끝단을 명시적으로 검사해버리면
+프로그램을 백업한것처럼 보이게 하는 문제를 회피하는 것입니다.
 X<eof> X<end-of-file> X<end of file>
 
     $on_a_tty = -t STDIN && -t STDOUT;
@@ -815,9 +816,10 @@ X<readline> X<< <> >>
 
 =end original
 
-C<for> ループの条件として C<readline> (または演算子形式の C<< <EXPR> >>) を
-使う場合、以下のように省略形が使えます。
-この振る舞いは C<while> ループ条件と同じです。
+C<for> 루프의 조건으로써 C<readline> (또는 연산자형식의 C<< EXPR> >>) 를
+사용하는 경우 아래처럼 생략형태를 사용할 수 있습니다.
+이것은 C<while> 루프 조건과 같습니다.
+
 X<readline> X<< <> >>
 
     for ( prompt(); defined( $_ = <STDIN> ); prompt() ) {
@@ -827,7 +829,7 @@ X<readline> X<< <> >>
 =head2 Foreach Loops
 X<for> X<foreach>
 
-(foreach ループ)
+(foreach 루프)
 
 =begin original
 
@@ -844,15 +846,16 @@ X<my> X<local>
 
 =end original
 
-C<foreach> ループは 通常のリスト値に対しての繰り返しを行い、変数 VAR に
-リストの要素を繰り返し一回に一つずつセットします。
-変数の前に C<my> というキーワードが置かれていた場合、その変数は
-レキシカルスコープを持ち、したがってそれはループの中でのみ可視となります。
-このキーワードがなければ、変数はループに対してローカルとなり、ループを
-抜けた後で以前の値が再度取得されます。
-変数が事前に C<my> を使って宣言されていたならば、グローバルなものの
-代わりにその変数を使いますが、それもループにローカルなものとなります。
-この暗黙のローカル化は C<foreach> の中で I<のみ> 起きます。
+C<foreach> 루프는 일반적인 리스트값에 대한 반복을 행하고, 변수 VAR 에
+리스트의 요소를 반복해 한번에 하나씩 설정합니다.
+변수의 앞에 C<my> 라는 키워드가 있는 경우, 그 변수는
+렉시컬스코프를 가지고, 따라서 그것은 루프의 안에서만 볼수 있게 됩니다.
+이 키워드가 없으면, 변수는 루프에 대해서 로컬이 되고, 루프ㄹ
+빠져나온 뒤에 앞의 값이 다시 얻어지게 됩니다.
+변수가 사전에 C<my> 를 사용해 선언되었다면, 글로벌한 것 대신에
+그 변수를 사용하지만, 그것도 루프에 로컬한 것이 됩니다.
+이 암묵적인 로컬화는 C<foreach> 안에서I<만> 일어납니다.
+
 X<my> X<local>
 
 =begin original
@@ -865,10 +868,10 @@ X<$_>
 
 =end original
 
-読みやすさのために C<foreach> を、簡潔さのために C<for> を使うことが
-できます(あるいは C シェルよりも Bourne シェルに親しんでいるのなら
-C<for> の方が自然でしょう)。
-VAR が省略された場合には、C<$_> に値が設定されます。
+읽기 쉽게하기 위해 C<foreach> 를, 간단함을 위해 C<for> 를 사용할 수 있습니다.
+(혹은 C 셸보다도 Bourne 셸에 익숙해 있다면 C<for> 쪽이 자연스럽겠죠)
+VAR 가 생략된 경우에는, C<$_> 에 값이 설정됩니다.
+
 X<$_>
 
 =begin original
@@ -882,12 +885,13 @@ X<alias>
 
 =end original
 
-LIST の要素が左辺値であった場合、ループの中で VAR を変更することにより、
-対応する値を変更することができます。
-逆に、LIST の要素が左辺値でない場合は、この要素を修正しようとしても
-失敗します。
-言い換えると、C<foreach> ループの帰納変数がループの対象となっている
-リスト中の個々のアイテムに対するエイリアスになっているからです。
+LIST 의 요소가 좌변치인 경우, 루프의 안에서 VAR 를 변경하는 것에 의해
+대응하는 값을 변경하는 것이 가능합니다.
+거꾸로, LIST 의 요소가 좌변치가 아닌 경우, 이 요소를 수정하려고 해도 
+실패하게 됩니다.
+바꿔 말하면, C<foreach> 루프의 귀납변수가 루프의 대상이 된
+리스트 안의 각각의 아이템에 대한 별명이 되어 있기 때문입니다.
+
 X<alias>
 
 =begin original
@@ -899,10 +903,10 @@ X<splice>
 
 =end original
 
-LIST のいずれかの部分が配列であった場合に、たとえば C<splice> を使って
-ループの本体でその要素を削除したりあるいは追加したりすると
-C<foreach> は非常に混乱してしまいます。
-ですからそういうことをしてはいけません。
+LIST 의 어떤 부분이 배열인 경우에, 예를 들면 C<splice> 를 사용해
+루프의 본체에서 그 요소를 삭제하거나 혹은 추가하거나 하면
+C<foreach> 는 꽤 혼란해버립니다.
+그래서 그런 것을 해서는 안됩니다.
 X<splice>
 
 =begin original
@@ -912,9 +916,9 @@ special variable.   Don't do that either.
 
 =end original
 
-VAR が tie されていたりあるいは他の特殊変数であった場合には
-C<foreach> はあなたのもくろみどおりには動かないでしょう。
-こういうこともしてはいけません。
+VAR 가 tie 되거나 혹은 다른 특수변수인 경우에는
+C<foreach> 는 계획대로 움직이지 않을 겁니다.
+이런 것도 해서는 안됩니다.
 
 =begin original
 
@@ -946,8 +950,8 @@ Here's how a C programmer might code up a particular algorithm in Perl:
 
 =end original
 
-以下の例は、C プログラマーが Perl でとあるアルゴリズムを記述するときに
-使うであろうやり方です:
+아래의 예제는, C 프로그래머가 Perl 에서의 알고리즘을 기술할 때에
+사용할 것 같은 방법입니다.
 
     for (my $i = 0; $i < @ary1; $i++) {
 	for (my $j = 0; $j < @ary2; $j++) {
@@ -966,8 +970,8 @@ do it:
 
 =end original
 
-それに対して、次の例は Perl プログラマーが同じことをよりゆったりとして
-行うやり方です:
+이것에 대해, 아래의 예제는 Perl 프로그래머가 같은 것을 보다 여유있게
+하는 방법입니다.
 
     OUTER: for my $wid (@ary1) {
     INNER:   for my $jet (@ary2) {
@@ -988,20 +992,18 @@ equivalent C<for> loop.
 
 =end original
 
-どのくらいこれが簡単になったように見えますか? これは明確で、安全で、
-高速です。
-これは余計なものが少ないので明確なのです。
-これは後で内側のループと外側のループとの間にコードを付加えた場合でも、
-それを間違って実行することがないので安全なのです。
-C<next> は内側のループを終了するのではなく、外側のループの繰り返しを
-行います。
-そしてこれは、Perl は C<foreach> 文をそれと等価な C<for> ループよりも
-すばやく実行するので高速なのです。
+얼마나 이것이 간단해진 것 같나요? 이것은 "명확"하고, "안전"하고, "빠릅"니다.
+이것은 쓸데없는 것이 적기때문에 명확한 것입니다.
+이것은 뒤에 안쪽의 루프와 바깥 쪽의 루프의 사이에 코드를 추가하는 경우에도
+그것을 착각해서 실행하는 경우가 없기때문에 안전합니다.
+C<next> 는 안쪽의 루프를 종료하는 것이 아닌, 바깥쪽의 루프의 반복을 수행합니다.
+그리고 이것은, Perl 은 C<foreach> 문을 그것과 같은 C<for> 루프보다도
+빠르게 실행하기 때문에 빠른 것이죠.
 
 =head2 Basic BLOCKs
 X<block>
 
-(基本ブロック)
+(기본 블록)
 
 =begin original
 
