perlobj.pod done (only JP2KR)

--- a/perldoc/ko/perl/etc/perlobj.pod
+++ b/perldoc/ko/perl/etc/perlobj.pod
@@ -970,12 +970,12 @@ C<VERSION> form of C<use>.
 
 =end original
 
-C<VERSION> はクラス(パッケージ)のバージョン番号を返します。
-引数 NEED が与えられている場合、カレントバージョン(指定されたパッケージ
-変数 $VERSION で定義されます)が NEED よりも小さくないことを検査します。
-もし小さければ die します。
-このメソッドは通常クラスメソッドとして呼び出されます。
-また、このメソッドは C<use> の C<VERSION> 形式によって自動的に呼び出されます。
+C<VERSION> 은 클래스(패키지)의 버젼번호를 반환합니다.
+인수 NEED 가 주어져 있는 경우, 최근버젼(지정된 패키지변수 $VERSION으로
+정의된)이 NEED보다 작지 않은 것을 검사합니다.
+만약 작다면 die 합니다.
+이 메소드는 일반적인 클래스메소드로써 호출됩니다.
+또, 이 메소드는 C<use>의 C<VERSION> 형식에 의해 자동적으로 호출됩니다.
 
     use A 1.2 qw(some imported subs);
     # implies:
@@ -991,10 +991,10 @@ strange effects if the Perl code dynamically changes @ISA in any package.
 
 =end original
 
-B<注意:> C<can> は Perl の内部コードをメソッドの検索のために使用し、
-C<isa>はそれと良く似た手法と、キャッシングを行います。
-これにより、@ISA をパッケージの中で動的に変更したりすると、奇妙な影響を
-引き起こす可能性があります。
+B<주의:> C<can> 은 Perl 내부코드를 메소드의 검색을 위해 사용하고,
+C<isa>는 그것과 매우 비슷한 수법과, 캐싱을 수행합니다.
+이에 의해, @ISA를 패키지 안에서 동적으로 변경하거나 하면, 희한한 영향을
+일으킬 가능성이 있습니다.
 
 =begin original
 
@@ -1004,16 +1004,16 @@ available to your program (and you should not do so).
 
 =end original
 
-Perl プログラムや XS プログラムを通じて、UNIVERSAL クラスに他のメソッドを
-追加することもできます。
-追加したメソッドを自作のプログラムで使えるようにするために
-C<use UNIVERSAL> を行う必要はありません
-(そしてそうするべきではありません)。
+Perl 프로그램이나 XS 프로그램을 통해서 UNIVERSAL 클래스에 다른 메소드를
+추가하는 것도 가능합니다.
+추가한 메소드를 스스로 만든 프로그램으로 사용할 수 있도록 하기 위해
+C<use UNIVERSAL> 을 수행할 필요는 없습니다.
+(그리고 그런 건 해서도 안됩니다)
 
 =head2 Destructors
 X<destructor> X<DESTROY>
 
-(デストラクタ)
+(파괴자)
 
 =begin original
 
@@ -1031,19 +1031,19 @@ C<%{$_[0]}> etc.) is not similarly constrained.
 
 =end original
 
-あるオブジェクトに対する最後のリファレンスが消滅したとき、そのオブジェクトは
-自動的に破棄されます(これはあなたがリファレンスを大域変数に格納していて、
-プログラムを終了するときでもそうです)。
-もしオブジェクトが解放される直前に制御を横取りしたいのであれば、クラスの
-中で DESTROY メソッドを定義することができます。
-このメソッドは適切な時期に自動的に呼び出され、あなたが必要とする
-クリーンアップを行うことができます。
-デストラクトされるオブジェクトに対する第一引数(かつ唯一の引数)として
-リファレンスを渡します。
-このリファレンスは読み込み専用の値であり、デストラクタの中で
-C<$_[0]> を操作することによって変更することはできません。
-オブジェクトそれ自身(C<${$_[0]}>, C<@{$_[0]}>, C<%{$_[0]}> のような名前の
-ついたものに対するリファレンス)は同様に強制されません。
+어떤 오브젝트에 대해 마지막의 리퍼런스가 소멸했을 때, 그 오브젝트는
+자동적으로 파괴됩니다(이것은 당신이 리퍼런스를 대역변수에 넣어서,
+프로그램을 종료할 때도 같습니다).
+만약 오브젝트가 해방되기 직전에 제어를 얻고싶다면, 클래스 안에서
+DESTROY 메소드를 정의할 수 있습니다.
+이 메소드는 적절한 시기에 자동적으로 호출되어, 당신이 필요로하는
+클린업을 수행할 수 있습니다.
+파괴된 오브젝트에 대한 첫번째인수(혹은 유일한 인수)로써
+리퍼런스를 건냅니다.
+이 리퍼런스는 읽기 전용의 값이며, 파괴자 안에서
+C<$_[0]> 를 조작하는 것에 의해 변경할 수 없습니다.
+오브젝트 그 자신을(C<${$_[0]}>, C<@{$_[0]}>, C<%{$_[0]}> 같은 이름이
+붙은 것에 대한 리퍼런스)는 마찬가지로 강제되지 않습니다.
 
 =begin original
 
@@ -1071,12 +1071,13 @@ but is usually never needed.
 
 =end original
 
-デストラクタから抜ける前にリファレンスを再 bless するようにアレンジすると、
-perl はカレントのデストラクターから呼び出した後で再 bless されたオブジェクトの
-ための DESTROY メソッドを再度呼び出します。
-これはオブジェクトの委譲を始末するのに使ったり、あなたが呼び出すことを
-選択したベースクラスのデストラクターを保証するのに使うことができます。
-陽に DESTROY を呼び出すことも可能ですが、通常はそうする必要はありません。
+파괴자에서 나오기 전에 리퍼런스를 다시 bless 하도록 정리하면,
+perl은 최근 파괴자에서 호출된 후, 다시 bless 된 오브젝트를 위해
+DESTROY 메소드를 다시금 호출합니다.
+이것은 오브젝트의 위임을 처음부터 끝까지 하는데 사용하거나,
+호출한 것을 선택한 베이스클래스의 파괴자를 보증하는 것에도 사용할 수 있습니다.
+명시적으로 DESTROY를 호출하는 것도 가능하지만, 
+일반적으로는 그럴 필요는 없습니다.
 
 =begin original
 
@@ -1087,14 +1088,13 @@ elsewhere.
 
 =end original
 
-カレントで破棄されるオブジェクトに属するオブジェクトに関して
-混乱しないようにしてください。
-そのようなオブジェクトはカレントオブジェクトが解放されるときに自動的に
-解放・破棄が行われ、他のなにものに対するリファレンスがないようにします。
+최근에 파괴된 오브젝트에 속해있는 오브젝트에 관해서 혼동하지 않도록 해주세요.
+이런 오브젝트는 최근오브젝트가 해방된 때에 자동적으로 해방, 파괴가 이루어져
+다른 어떤 것에 대한 리퍼런스가 없도록 합니다.
 
 =head2 Summary
 
-(まとめ)
+(정리)
 
 =begin original
 
@@ -1104,15 +1104,15 @@ with it for the next six months or so.
 
 =end original
 
-これで、ここでなすべきことは全て終わりました。
-今、あなたは部屋を出てオブジェクト指向方法論に関する書籍を購入して、
-そして六ヶ月かそこらの間悩む必要があるでしょう。
+이것으로, 여기에서 말할 것은 전부 끝났습니다.
+지금, 당신은 방을 나와 오브젝트 지향방법론에 관한 서적을 사서,
+6개월이 정도쯤은 고민할 필요가 있을 것입니다.
 
 =head2 Two-Phased Garbage Collection
 X<garbage collection> X<GC> X<circular reference>
 X<reference, circular> X<DESTROY> X<destructor>
 
-(2 フェーズガベージコレクション)
+(2 단계 가비지컬렉션)
 
 =begin original
 
@@ -1125,12 +1125,13 @@ probably won't matter.
 
 =end original
 
-ほとんどの目的のために、Perl は単純かつ高速なリファレンスベースの
-ガベージコレクションシステムを使用します。
-このため、幾つかの段階において余計なデリファレンスが起こり、使用している Perl を
-ビルドするときに C<-O> フラグをコンパイラに使っていなければ、性能が劣化します。
-Perl をビルドするときに C<cc -O> を使っていれば、このデリファレンスは問題とは
-ならないでしょう。
+주된 목적을 위해, Perl 은 단순하고 빠른 리퍼런스 기반의
+가비지 컬렉션 시스템을 사용합니다.
+이 때문에, 몇 단계에 걸쳐서 쓸데없는 디리퍼런스가 발생하고, 사용하고 있는
+Perl 을 빌드할 때에 C<-O> 플래그를 컴파일러에 사용하지 않으면, 성능이 
+떨어지게 됩니다.
+Perl 을 빌드할 때에 C<cc -O> 를 사용하면, 이 디리퍼런스는 문제가
+되지 않을 겁니다.
 
 =begin original
 
@@ -1140,10 +1141,10 @@ idea:
 
 =end original
 
-より深刻な問題は、ゼロでないリファレンスカウントを持っている
-アクセスできないメモリー(unreachable memory)が通常は
-解放されないということです。
-したがって、以下のようにすることは悪いアイデアです。
+보다 심각한 문제는, 제로가 아닌 리퍼런스 카운터를 가지고 있는
+접근할 수 없는 메모리(unreachable memory)가 일반적으로는
+해방되지 않는다는 것입니다.
+따라서, 아래처럼 하는 것은 나쁜 아이디어입니다.
 
     {
 	my $a;
@@ -1159,11 +1160,11 @@ node such as one might use in a sophisticated tree structure:
 
 =end original
 
-$a が無くなるように思えるのですが、できないのです。
-再帰的データ構造を構築したとき、メモリリークを気にしないためには自分自身で、
-明示的に、自己参照を壊さなければなりません。
-たとえば、木構造を扱うときに使うような自己参照構造体として以下のようなものを
-考えてみます。
+$a 가 없어지도록 생각할수 있지만, 그럴 수 없습니다.
+재귀적인 데이터구조를 구축할 때, Memory Leak 를 신경쓰지 않기위해서는 
+자기 자신이 명시적으로 자기참조를 파괴하지 않으면 안됩니다.
+예를 들면, 트리구조를 다룰 때에 사용하는 자기참조구조체로써 아래와 같은
+것을 생각해 봅시다.
 
     sub new_node {
 	my $class = shift;
@@ -1181,9 +1182,9 @@ construed as a feature, and you shouldn't depend on it.)
 
 =end original
 
-このようなノードを生成するとき、あなた自身が自分で自己参照を壊さない
-限りノードはなくなりません(言い換えれば、これは仕様として
-解釈されるものではなく、これに依存すべきではないということです)。
+이런 노드를 생성할 때, 당신 자신이 자기참조를 파괴하지 않는 한
+노드는 없어지지 않습니다(바꿔 말하면 , 이것은 스펙으로써
+해석되는 것이 아닌, 이것은 의존해서는 안된다는 것입니다)
 
 =begin original
 
@@ -1191,7 +1192,7 @@ Almost.
 
 =end original
 
-거의...
+대부분은요..
 
 =begin original
 
